--- a/style.css
+++ b/style.css
@@ -1,121 +1,129 @@
 * {
-    font-family: Helvetica Neue, Helvetica, Arial;
-    font-weight: 400;
-    cursor: default;
-  }
+  font-family: Helvetica Neue, Helvetica, Arial;
+  font-weight: 400;
+  cursor: default;
+}
 
-  body {
-    background-image: linear-gradient(to left, #f43b47 0%, #453a94 100%);
-    
-    
-  }
+body {
+  background: #6b6b6b;
+}
 
-  #titulo {
-    font-size: 40px;
-    color: black;
-    text-align: center;
-  }
+#titulo {
+  font-size: 2rem;
+  color: black;
+  text-align: center;
+}
 
-  #placar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+#placar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-  #jogador, #computador {
-    position: relative;
-    flex-grow: 1;
-    border-radius: 5px;
-    width: 200px;
-    padding: 20px;
-    color: #fff;
-    
-  }
-  #jogador {
-    background-color: #0984e3;
-    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.151);
-    
-  }
-  #computador {
-    background-color: #d63031;
-    box-shadow: -10px 10px 5px rgba(0, 0, 0, 0.151);
-    
-  }
-  #versus {
-    width: 150px;
-    text-align: center;
-    font-size: 72px;
-    font-weight: 300;
-  }
-
-  #jogador-nome, #computador-nome {
-    margin: 0;
-    padding: 0;
-  }
-  #jogador-nome {
-    text-align: left;
-  }
-  #computador-nome {
-    text-align: right;
-  }
-
-  #jogador-pontos, #computador-pontos {
-    position: absolute;
-    top: 8px;
-    font-size: 72px;
-  }
-  #jogador-pontos {
-    right: 20px;
-  }
-  #computador-pontos {
-    left: 20px;
-  }
-
-  #jogador-escolha, #computador-escolha {
-    list-style: none;
-    text-align: center;
-    margin: 30px 0 0;
-    padding: 0;
-  }
-  #jogador-escolha li, #computador-escolha li {
-    display: inline;
-    padding: 0 15px;
-  }
-  #jogador-escolha a, #computador-escolha a {
-    opacity: .2;
-    padding: 5px;
-  }
-  #jogador-escolha a:hover, #jogador-escolha a.selecionado, #computador-escolha a.selecionado {
-    opacity: 1;
-  }
-  #jogador-escolha img, #computador-escolha img {
-    max-width: 80px;
-  }
-
-  #mensagem {
-    border-radius: 5px;
-    background-color: #fff200;
-    font-size: 25px;
-    color: black;
-    text-align: center;
-    font-weight: 400;
-    margin-top: 20px;
-    padding: 20px;
-    box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.151);
-  }
-
-  #instagram {
-      margin-top: 20px;
-      text-align: justify;
-      color: white;
-  }
-a {
-    color: white;
-    text-decoration: none;
-    
+#jogador, #computador {
+  position: relative;
+  flex-grow: 1;
+  border-radius: 5px;
+  width: 200px;
+  padding: 20px;
+  color: #fff;
     
 }
+
+#jogador {
+  background-color: #0984e3;
+  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.151);
+}
+
+#computador {
+  background-color: #d63031;
+  box-shadow: -10px 10px 5px rgba(0, 0, 0, 0.151);    
+}
+
+#versus {
+  width: 150px;
+  text-align: center;
+  font-size: 72px;
+  font-weight: 300;
+}
+
+#jogador-nome, #computador-nome {
+  margin: 0;
+  padding: 0;
+}
+  
+#jogador-nome {
+  text-align: left;
+}
+  
+#computador-nome {
+  text-align: right;
+}
+
+#jogador-pontos, #computador-pontos {
+  position: absolute;
+  top: 8px;
+  font-size: 4rem;
+}
+  
+#jogador-pontos {
+  right: 20px;
+}
+  
+#computador-pontos {
+  left: 20px;
+}
+
+#jogador-escolha, #computador-escolha {
+  list-style: none;
+  text-align: center;
+  margin: 30px 0 0;
+  padding: 0;
+}
+  
+#jogador-escolha li, #computador-escolha li {
+  display: inline;
+  padding: 0 15px;
+}
+  
+#jogador-escolha a, #computador-escolha a {
+  opacity: .2;
+  padding: 5px;
+}
+  
+#jogador-escolha a:hover, #jogador-escolha a.selecionado, #computador-escolha a.selecionado {
+  opacity: 1;
+}
+  
+#jogador-escolha img, #computador-escolha img {
+  max-width: 80px;
+}
+
+#mensagem {
+  border-radius: 5px;
+  background-color: #fff200;
+  font-size: 1.5rem;
+  color: black;
+  text-align: center;
+  font-weight: 400;
+  margin-top: 20px;
+  padding: 20px;
+  box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.151);
+}
+
+#instagram {
+  margin-top: 1.5rem;
+  text-align: justify;
+  color: white;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  font-size: 0.8rem;
+}
+
 a:hover {
-    color: yellow;
-    
+  color: rgba(255, 255, 255, 0.39);
+  cursor: pointer;    
 }
